# rust-hexagonal-arkitektur

./: Cargo.toml  README.md  build.rs
bookstore_api/: Cargo.toml  README.md
bookstore_api/.openapi-generator/: FILES
bookstore_api/docs/: Book.md  DefaultApi.md
bookstore_api/src/: lib.rs
bookstore_api/src/apis/: configuration.rs  default_api.rs
bookstore_api/src/models/: book.rs  mod.rs
bookstore_server/: Cargo.toml
bookstore_server/src/: lib.rs
db_outbound/: Cargo.toml
db_outbound/src/: book_repository_impl.rs  lib.rs
domain/: Cargo.toml
domain/src/: lib.rs  models.rs  repositories.rs
openapi/: bookstore.yaml
src/: main.rs
